--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "formik": "^2.4.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
